--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme
 title: 特殊物品与生物制品审批知识库
-description: 收录科研用特殊物品及生物制品进口审批相关知识与经验。
+# description: 收录科研用特殊物品及生物制品进口审批相关知识与经验。
